Missed PR comment